...

        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/ingredients_label" />

    <android.support.v7.widget.RecyclerView

        android:id="@+id/rv_ingredients_list"
        android:background="@color/colorPrimaryLight"
        android:nestedScrollingEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/steps_label"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps"
        android:background="@color/colorPrimaryLight"
        android:nestedScrollingEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
...
