...
            android:layout_width="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/step_thumbnail_description"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_step_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/horizontal_margin"
            android:textColor="@color/colorPrimaryText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@string/step_description"/>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_next"
        android:layout_gravity="bottom|end"
...
